infra/k8s/posts_old.yml
apiVersion: v1
kind: Pod
metadata:
  name: posts
spec:
  containers:
    - name: posts
      image: shahmir811/posts:0.0.1
      imagePullPolicy: Never
